kubernetes/angular-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-angular
  namespace: smart-shell-production
  labels:
    app: app-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-angular
  template:
    metadata:
      labels:
        app: app-angular
    spec:
      containers:
        - name: app-angular
          image: luis122448/smart-shell-angular:latest
          ports:
            - containerPort: 80
