kubernetes/angular-service.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: smart-shell-production
  labels:
    app: angular-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: angular-service
