kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: smart-shell-production
  labels:
    app: mongo-service
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-service
