kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: smart-shell-production
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres
