kubernetes/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: smart-shell-production
spec:
  clusterIP: None
  ports:
    - port: 6379
      name: redis
  selector:
    app: redis
