kubernetes/springboot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: smart-shell-production
  labels:
    app: springboot-service
spec:
  type: ClusterIP
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: springboot
  selector:
    app: springboot
